# icub-wholebody-visualization

./: README.md
com2gui/: CMakeLists.txt  main.cpp
torque_viewer/: CMakeLists.txt  README.md  dialog.h  images.qrc  main.cpp  torquegetter.cpp  torquegetter.h  torqueitem.cpp  torqueitem.h  torqueview.cpp  torqueview.h  torqueviewer.ini  torqueviewer_with_tree.ini
torque_viewer/app/: INRIA-torqueViewer.xml
torque_viewer/config/: torqueviewer.ini  torqueviewer_with_tree.ini
torque_viewer/scripts/: start_env.sh
torque_viewer/src/: dialog.cpp  dialog.ui  graphicstorqueitem.h  images.qrc  main.cpp  torquegetter.cpp  torqueview.cpp
